--- a/index.html
+++ b/index.html
@@ -633,10 +633,10 @@ function loadGoogleTagManager() {
 			}
 
 			function resetAt9am() {
-				const lastResetDate = localStorage.getItem('lastResetDate');
-				const today = new Date().toISOString().slice(0, 10);
+  const lastResetDate = localStorage.getItem('lastResetDate');
+  const today = new Date().toISOString().slice(0, 10);
 
-if (isPast9amUKTime() && lastResetDate !== today) {
+  if (isPast9amUKTime() && lastResetDate !== today) {
     // Update the date and Crickdle number here
     const dateElement = document.querySelector('.popup2-content ul li:first-child');
     const crickdleNumber = 37 + Math.floor((new Date() - getUKTime(new Date(2023, 2, 27, 9))) / (24 * 60 * 60 * 1000));
@@ -649,28 +649,28 @@ if (isPast9amUKTime() && lastResetDate !== today) {
 
     // Force a page reload
     location.href = location.href;
-					
+
+    // Reset the game state
+    const guessInputs = document.querySelectorAll(".guess-input");
     guessInputs.forEach((input, index) => {
-        localStorage.removeItem(`guess${index + 1}`);
-        localStorage.removeItem(`guess${index + 1}Color`);
-        localStorage.removeItem(`guess${index + 1}TextColor`);
-        localStorage.removeItem(`guess${index + 1}FontWeight`);
-        localStorage.removeItem(`guess${index + 1}Disabled`);
+      localStorage.removeItem(`guess${index + 1}`);
+      localStorage.removeItem(`guess${index + 1}Color`);
+      localStorage.removeItem(`guess${index + 1}TextColor`);
+      localStorage.removeItem(`guess${index + 1}FontWeight`);
+      localStorage.removeItem(`guess${index + 1}Disabled`);
+      const currentInput = input.querySelector("input");
+      currentInput.value = "";
+      currentInput.style.backgroundColor = "";
+      currentInput.style.color = "";
+      currentInput.style.fontWeight = "";
+      currentInput.disabled = index !== 0;
+      const submitButton = submitButtons[index];
+      submitButton.disabled = index !== 0;
     });
     localStorage.removeItem('playedToday');
     localStorage.setItem('lastResetDate', today);
-
-    guessInputs.forEach((input, index) => {
-        input.querySelector("input").value = "";
-        input.querySelector("input").style.backgroundColor = "";
-        input.querySelector("input").style.color = "";
-        input.querySelector("input").style.fontWeight = "";
-        input.querySelector("input").disabled = index !== 0;
-        submitButtons[index].disabled = index !== 0;
-    });
+  }
 }
-			}
-
 
 			function saveState() {
 				guessInputs.forEach((input, index) => {
