--- a/index.html
+++ b/index.html
@@ -850,17 +850,19 @@ function loadGoogleTagManager() {
 			const popupBackground = document.querySelector('.popup-background');
 			const popupCloseButton = document.querySelector('.popup-close');
 			
-			const hasShownInstructions = localStorage.getItem('hasShownInstructions');
-			const hasAcceptedCookies = document.cookie.includes('gaEnabled=true');
-			
-			if (!hasShownInstructions) {
-				popupBackground.style.display = 'flex';
-				localStorage.setItem('hasShownInstructions', 'true');
-			}
-			
-			if (!hasAcceptedCookies) {
-				document.getElementById('cookieConsent').style.display = 'block';
-			}
+			window.addEventListener('load', function() {
+    const hasShownInstructions = localStorage.getItem('hasShownInstructions');
+    const hasAcceptedCookies = document.cookie.includes('gaEnabled=true');
+
+    if (!hasShownInstructions) {
+        popupBackground.style.display = 'flex';
+        localStorage.setItem('hasShownInstructions', 'true');
+    }
+
+    if (!hasAcceptedCookies) {
+        document.getElementById('cookieConsent').style.display = 'block';
+    }
+});
 
 			helpButton.addEventListener('click', function() {
 				popupBackground.style.display = 'flex';
