--- a/index.html
+++ b/index.html
@@ -606,15 +606,15 @@ function loadGoogleTagManager() {
 			}
 			
 			const gameDetails = {
-				nation1: "Australia",
-				nation2: "England",
-				date: "Dec 26-29, 2010",
-				venue: "Melbourne",
-				score: "Australia 98 & 258, England 513; England won by an innings and 157 runs",
-				crickdlequestion: "England player scored 168* in this match?"
+				nation1: "India",
+				nation2: "South Africa",
+				date: "Oct 2-6, 2019",
+				venue: "Visakhapatnam",
+				score: "India 502/7d & 323/4d, South Africa (T: 395) 431 & 191; India won by 203 runs",
+				crickdlequestion: "India player scored 176 & 127 in this match?"
 			};
 
-			const correctPlayer = ["TROTT"];
+			const correctPlayer = ["SHARMA"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
