--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 					<div class="popup2-content">
   <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br>
   <ul>
-    <li id="date-element"></li>
+    <li id="date-element" style="font-weight: bold;"></li>
     <li id="crickdle-number"></li>
   </ul>
   Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
