--- a/result.html
+++ b/result.html
@@ -359,13 +359,13 @@
 	<script>
 	window.addEventListener('storage', (event) => {
   if (event.key === 'playedToday') {
-    if (event.newValue !== 'true') {
+    if (!event.newValue) {
       window.location.href = 'index.html';
     }
   }
 });
-		
-		if (!localStorage.getItem('playedToday')) {
+
+if (!localStorage.getItem('playedToday')) {
   window.location.href = 'index.html';
 }
 	
