--- a/result.html
+++ b/result.html
@@ -357,7 +357,13 @@
 			</div>
 
 	<script>
-	window.addEventListener('storage', (event) => {
+function checkPlayedToday() {
+  if (!localStorage.getItem('playedToday')) {
+    window.location.href = 'index.html';
+  }
+}
+
+window.addEventListener('storage', (event) => {
   if (event.key === 'playedToday') {
     if (!event.newValue) {
       window.location.href = 'index.html';
@@ -365,9 +371,13 @@
   }
 });
 
-if (!localStorage.getItem('playedToday')) {
-  window.location.href = 'index.html';
-}
+document.addEventListener('visibilitychange', () => {
+  if (document.visibilityState === 'visible') {
+    checkPlayedToday();
+  }
+});
+
+checkPlayedToday();
 	
 		const crickdleDateElement = document.getElementById('crickdleDate');
     const crickdleNumberElement = document.getElementById('crickdleNumber');
