--- a/index.html
+++ b/index.html
@@ -606,15 +606,15 @@ function loadGoogleTagManager() {
 			}
 			
 			const gameDetails = {
-				nation1: "India",
-				nation2: "South Africa",
-				date: "Oct 2-6, 2019",
-				venue: "Visakhapatnam",
-				score: "India 502/7d & 323/4d, South Africa (T: 395) 431 & 191; India won by 203 runs",
-				crickdlequestion: "India player scored 176 & 127 in this match?"
+				nation1: "South Africa",
+				nation2: "Zimbabwe",
+				date: "Mar 4-5, 2005",
+				venue: "Cape Town",
+				score: "Zimbabwe 54 & 265, South Africa 340/3d; South Africa won by an innings and 21 runs",
+				crickdlequestion: "South Africa player scored 54 and took 4/13 & 1/40 in this match?"
 			};
 
-			const correctPlayer = ["SHARMA"];
+			const correctPlayer = ["KALLIS"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
