--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Pixel Code for https://app.tinyanalytics.io/ -->
+<script defer src="https://app.tinyanalytics.io/pixel/7Q05CfStullf2o7A"></script>
+<!-- END Pixel Code -->
 		<link rel="canonical" href="https://crickdle.com/">
 		<script type="application/ld+json">
 		{
