--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script data-goatcounter="https://crickdle.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 		<link rel="canonical" href="https://crickdle.com/">
 		<script type="application/ld+json">
 		{
@@ -31,9 +33,6 @@
 		<meta property="og:image" content="https://crickdle.com/favicon.ico.png">
 		<meta property="og:url" content="https://crickdle.com/">
 		<meta property="og:type" content="website">
-				<!-- Pixel Code for https://app.tinyanalytics.io/ -->
-<script defer src="https://app.tinyanalytics.io/pixel/7Q05CfStullf2o7A"></script>
-<!-- END Pixel Code -->
 		<style>
 			@font-face {
 				font-family: InterTight;
