--- a/result.html
+++ b/result.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
+			<script data-goatcounter="https://crickdle.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+	<title>Crickdle - Daily Cricket Guessing Game | Your Result</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<meta name="description" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
+	<meta name="description" content="Crickdle - Daily Cricket Guessing Game | Your Result">
 	<meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
 	<meta name="author" content="Ayush Sanghavi">
 	<style>
