--- a/index.html
+++ b/index.html
@@ -516,15 +516,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "South Africa",
-				nation2: "Zimbabwe",
-				date: "Mar 4-5, 2005",
-				venue: "Cape Town",
-				score: "Zimbabwe 54 & 265, South Africa 340/3d; South Africa won by an innings and 21 runs",
-				crickdlequestion: "South Africa player scored 54 and took 4/13 & 1/40 in this match?"
+				nation1: "New Zealand",
+				nation2: "Australia",
+				date: "Mar 19-23, 2010",
+				venue: "Wellington",
+				score: "Australia (T: 106) 459/5d & 106/0, New Zealand (f/o) 157 & 407; Australia won by 10 wickets",
+				crickdlequestion: "Australia player scored 168 in this match?"
 			};
 
-			const correctPlayer = ["KALLIS"];
+			const correctPlayer = ["CLARKE"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
