--- a/index.html
+++ b/index.html
@@ -516,15 +516,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "New Zealand",
-				nation2: "Australia",
-				date: "Mar 19-23, 2010",
-				venue: "Wellington",
-				score: "Australia (T: 106) 459/5d & 106/0, New Zealand (f/o) 157 & 407; Australia won by 10 wickets",
-				crickdlequestion: "Australia player scored 168 in this match?"
+				nation1: "West Indies",
+				nation2: "India",
+				date: "May 18-22, 2002",
+				venue: "Kingston",
+				score: "West Indies 422 & 197, India (T: 408) 212 & 252; West Indies won by 155 runs",
+				crickdlequestion: "West Indies player scored 113 in this match?"
 			};
 
-			const correctPlayer = ["CLARKE"];
+			const correctPlayer = ["HINDS"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
