--- a/index.html
+++ b/index.html
@@ -516,15 +516,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "West Indies",
-				nation2: "India",
-				date: "May 18-22, 2002",
-				venue: "Kingston",
-				score: "West Indies 422 & 197, India (T: 408) 212 & 252; West Indies won by 155 runs",
-				crickdlequestion: "West Indies player scored 113 in this match?"
+				nation1: "India",
+				nation2: "New Zealand",
+				date: "Jun 18-23, 2021",
+				venue: "Southampton",
+				score: "India 217 & 170, New Zealand (T: 139) 249 & 140/2; New Zealand won by 8 wickets",
+				crickdlequestion: "New Zealand player scored 21 and took 5/31 & 2/30 in this match?"
 			};
 
-			const correctPlayer = ["HINDS"];
+			const correctPlayer = ["JAMIESON"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
