--- a/index.html
+++ b/index.html
@@ -516,15 +516,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "India",
-				nation2: "New Zealand",
-				date: "Jun 18-23, 2021",
-				venue: "Southampton",
-				score: "India 217 & 170, New Zealand (T: 139) 249 & 140/2; New Zealand won by 8 wickets",
-				crickdlequestion: "New Zealand player scored 21 and took 5/31 & 2/30 in this match?"
+				nation1: "Pakistan",
+				nation2: "Sri Lanka",
+				date: "Oct 28-Nov 1, 2004",
+				venue: "Karachi",
+				score: "Sri Lanka 208 & 406, Pakistan (T: 137) 478 & 139/4; Pakistan won by 6 wickets",
+				crickdlequestion: "Pakistan player took 3/72 & 7/118 in this match?"
 			};
 
-			const correctPlayer = ["JAMIESON"];
+			const correctPlayer = ["KANERIA"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
