--- a/index.html
+++ b/index.html
@@ -516,15 +516,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "Pakistan",
-				nation2: "Sri Lanka",
-				date: "Oct 28-Nov 1, 2004",
-				venue: "Karachi",
-				score: "Sri Lanka 208 & 406, Pakistan (T: 137) 478 & 139/4; Pakistan won by 6 wickets",
-				crickdlequestion: "Pakistan player took 3/72 & 7/118 in this match?"
+				nation1: "Zimbabwe",
+				nation2: "Bangladesh",
+				date: "Apr 25-29, 2013",
+				venue: "Harare",
+				score: "Bangladesh 391 & 291/9d, Zimbabwe (T: 401) 282 & 257; Bangladesh won by 143 runs",
+				crickdlequestion: "Bangladesh player scored 60 & 93 in this match?"
 			};
 
-			const correctPlayer = ["KANERIA"];
+			const correctPlayer = ["RAHIM"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
