--- a/result.html
+++ b/result.html
@@ -330,7 +330,7 @@
         <li><span style="font-weight: 500" id="crickdleDate"></span></li>
         <li><span id="crickdleNumber"></span></li>
     </ul>
-    Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+    Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
 </div>
 					</div>
 			</div>
@@ -353,7 +353,7 @@
 				</div>
 			       <div class="share-container">
         <button class="share-button">SHARE</button>
-        <a href="https://www.buymeacoffee.com/crickdle" target="_blank" rel="noopener" class="twitter-button">BUY ME A CHAI</a>
+        <a href="https://www.buymeacoffee.com/crickdle" target="_blank" rel="noopener" class="twitter-button">DONATE</a>
       </div>
 		<p>Next Crickdle in <span id="countdown"></span></p>
 			</div>
