--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <li id="date-element" style="font-weight: 500;"></li>
     <li id="crickdle-number"></li>
   </ul>
-  Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+  Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
 </div>
 				</div>
 			</div>
