--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 		<meta property="og:image" content="https://crickdle.com/favicon.ico.png">
 		<meta property="og:url" content="https://crickdle.com/">
 		<meta property="og:type" content="website">
+		<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Crickdle" />
+<meta name="twitter:description" content="The Daily Cricket Guessing Game" />
+<meta name="twitter:image" content="graphic.jpg" />
+<meta property="og:title" content="Crickdle" />
+<meta property="og:description" content="The Daily Cricket Guessing Game" />
+<meta property="og:image" content="graphic.jpg" />
+<meta property="og:url" content="https://crickdle.com" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Crickdle" />
 		<style>
 			@font-face {
 				font-family: InterTight;
