--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 		<meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Crickdle" />
 <meta name="twitter:description" content="The Daily Cricket Guessing Game" />
-<meta name="twitter:image" content="graphic.jpg" />
+<meta name="twitter:image" content="Graphic.jpg" />
 <meta property="og:title" content="Crickdle" />
 <meta property="og:description" content="The Daily Cricket Guessing Game" />
-<meta property="og:image" content="graphic.jpg" />
+<meta property="og:image" content="Graphic.jpg" />
 <meta property="og:url" content="https://crickdle.com" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Crickdle" />
