--- a/index.html
+++ b/index.html
@@ -28,21 +28,15 @@
 		<meta name="keywords" content="Wordle, cricket, Crickdle, test, challenge, quiz, game, sport, bowler, batsman, bowled, duck">
 		<meta name="author" content="Ayush Sanghavi">
 		<meta name="language" content="en">
-		<meta property="og:title" content="Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!">
-		<meta property="og:description" content="Crickdle is a daily cricket guessing game. Test your cricket knowledge and guess the cricketer based on their stats.">
-		<meta property="og:image" content="https://crickdle.com/favicon.ico.png">
+		<meta property="og:title" content="Crickdle">
+		<meta property="og:description" content="The Daily Cricket Guessing Game">
+		<meta property="og:image" content="Graphic.jpg">
 		<meta property="og:url" content="https://crickdle.com/">
 		<meta property="og:type" content="website">
 		<meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Crickdle" />
-<meta name="twitter:description" content="The Daily Cricket Guessing Game" />
-<meta name="twitter:image" content="Graphic.jpg" />
-<meta property="og:title" content="Crickdle" />
-<meta property="og:description" content="The Daily Cricket Guessing Game" />
-<meta property="og:image" content="Graphic.jpg" />
-<meta property="og:url" content="https://crickdle.com" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Crickdle" />
+		<meta name="twitter:title" content="Crickdle" />
+		<meta name="twitter:description" content="The Daily Cricket Guessing Game" />
+		<meta name="twitter:image" content="Graphic.jpg" />
 		<style>
 			@font-face {
 				font-family: InterTight;
