--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 		<meta name="language" content="en">
 		<meta property="og:title" content="Crickdle">
 		<meta property="og:description" content="The Daily Cricket Guessing Game">
-		<meta property="og:image" content="Graphic.jpg">
+		<meta property="og:image" content="https://crickdle.com/Graphic.jpg">
 		<meta property="og:url" content="https://crickdle.com/">
 		<meta property="og:type" content="website">
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:title" content="Crickdle" />
 		<meta name="twitter:description" content="The Daily Cricket Guessing Game" />
-		<meta name="twitter:image" content="Graphic.jpg" />
+		<meta name="twitter:image" content="https://crickdle.com/Graphic.jpg" />
 		<style>
 			@font-face {
 				font-family: InterTight;
