--- a/reminder.html
+++ b/reminder.html
@@ -603,6 +603,13 @@
         .ml-form-formContent.horozintalForm .ml-button-horizontal.labelsOn { padding-top: 0px!important; }
 
       }
+	    
+	    .ml-form-embedContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
     </style>
 
     
