--- a/reminder.html
+++ b/reminder.html
@@ -14,6 +14,14 @@
 	<meta name="keywords" content="Wordle, cricket, Crickdle, quiz, game, sport, bowler, batsman">
 	<meta name="author" content="Ayush Sanghavi">
     </head>
+	/* Vertically center the form */
+#mlb2-4393772.ml-form-embedContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 20px; /* Add some padding to prevent the form from touching the edges */
+}	
 <style type="text/css">@import url("https://assets.mlcdn.com/fonts.css?version=1679399");</style>
     <style type="text/css">
     /* LOADER */
@@ -603,13 +611,6 @@
         .ml-form-formContent.horozintalForm .ml-button-horizontal.labelsOn { padding-top: 0px!important; }
 
       }
-	    
-	    .ml-form-embedContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
     </style>
 
     
