--- a/index.html
+++ b/index.html
@@ -444,6 +444,10 @@
     border-top: 20px solid #ffffff;
     z-index: 1;
 }
+
+  .signup-link {
+      color: #1dc278;
+    }
 		</style>
 	</head>
 	<body>
@@ -475,12 +479,13 @@
 												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-  <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day. If you haven't already, you can <a href="reminder.html" target="_blank">sign up</a> for our daily reminder email.<br>
+  <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br>
   <ul>
     <li id="date-element" style="font-weight: 500;"></li>
     <li id="crickdle-number"></li>
   </ul>
-  Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
+  <p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
+		<p>Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
 </div>
 				</div>
 			</div>
