--- a/result.html
+++ b/result.html
@@ -295,6 +295,10 @@
 			padding-bottom: 0.4rem;
 			margin-bottom: 1.5rem
 		}
+		
+		   .signup-link {
+      color: #1dc278;
+    }
 	</style>
 	</head>
 	<header>
@@ -324,13 +328,14 @@
 						<h2><span style="font-weight: 500">ABOUT</span></h2>
 						<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
-					<div class="popup2-content">
-    <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day. If you haven't already, you can <a href="reminder.html" target="_blank">sign up</a> for our daily reminder email.<br>
-    <ul>
-        <li><span style="font-weight: 500" id="crickdleDate"></span></li>
-        <li><span id="crickdleNumber"></span></li>
-    </ul>
-    Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
+						<div class="popup2-content">
+  <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br>
+  <ul>
+    <li id="date-element" style="font-weight: 500;"></li>
+    <li id="crickdle-number"></li>
+  </ul>
+  <p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
+		<p>Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
 </div>
 					</div>
 			</div>
