--- a/result.html
+++ b/result.html
@@ -299,6 +299,7 @@
 		.signup-link {
 			color: #1dc278;
 		}
+		
 	</style>
 	</head>
 	<header>
@@ -315,10 +316,10 @@
 				<div class="popup">
 					<div class="popup-header">
 						<h2><span style="font-weight: 500">HOW TO PLAY</span></h2>
-						<button class="popup-close" aria-label="Close">&times;</button>
+												<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match' in 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.</p>
+						<p>Based on their stats in this game, guess the cricketer who was 'Player of the Match' in 4 tries.<br><ul><li>Each guess should be the <span style="font-weight: 500">surname</span> of the player you're guessing.</li><li>The colour of the box will change to show how close your guess is.</li></ul>If you misspell the name, the box will turn <span style="color: #e4a404"><span style="font-weight: 500">orange</span></span>, and if you get it wrong, the box will turn <span style="color: #787c7f"><span style="font-weight: 500">grey</span></span>.
 					</div>
 				</div>
 			</div>
@@ -326,9 +327,9 @@
 				<div class="popup2">
 					<div class="popup2-header">
 						<h2><span style="font-weight: 500">ABOUT</span></h2>
-						<button class="popup2-close" aria-label="Close">&times;</button>
+												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
-						<div class="popup2-content">
+					<div class="popup2-content">
   <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br>
   <ul>
     <li id="date-element" style="font-weight: 500;"></li>
@@ -336,8 +337,8 @@
   </ul>
   <p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
 		<p>Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
-						</div>
-					</div>
+</div>
+				</div>
 			</div>
 		</header>
 		<div class="container">
