--- a/result.html
+++ b/result.html
@@ -295,6 +295,10 @@
 			padding-bottom: 0.4rem;
 			margin-bottom: 1.5rem
 		}
+		
+		 .signup-link {
+      color: #1dc278;
+    }
 	</style>
 	</head>
 	<header>
