--- a/result.html
+++ b/result.html
@@ -334,7 +334,8 @@
     <li id="date-element" style="font-weight: 500;"></li>
     <li id="crickdle-number"></li>
   </ul>
-		Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
+  <p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
+		<p>Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
 </div>
 				</div>
 			</div>
@@ -361,7 +362,6 @@
       </div>
 		<p>Next Crickdle in <span id="countdown"></span></p>
 			</div>
-
 	<script>
 	function clearPlayedToday() {
   localStorage.removeItem('playedToday');
