--- a/result.html
+++ b/result.html
@@ -332,7 +332,7 @@
 					<div class="popup2-content">
   <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br>
   <ul>
-<li><span style=“font weight: 500 id=“crickdleDate”></span></li>
+<li><span style=“font-weight: 500" id=“crickdleDate”></span></li>
 <li><span id=“crickdleNumber”></span></li>
   </ul>
   <p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
