--- a/result.html
+++ b/result.html
@@ -335,9 +335,8 @@
 <li><span style="font-weight: 500" id="crickdleDate"></span></li>
 <li><span id="crickdleNumber"></span></li>
   </ul>
-		</p>
-  <p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
-		Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
+		<p>If you haven't already, you can <a href="reminder.html" target="_blank" class="signup-link">sign up</a> for our daily reminder email.<br>
+		<p>Please send any enquiries to <span style="font-weight: 500">hello [at] crickdle [dot] com</span></p>
 </div>
 				</div>
 			</div>
