--- a/index.html
+++ b/index.html
@@ -525,15 +525,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "Zimbabwe",
-				nation2: "Bangladesh",
-				date: "Apr 25-29, 2013",
-				venue: "Harare",
-				score: "Bangladesh 391 & 291/9d, Zimbabwe (T: 401) 282 & 257; Bangladesh won by 143 runs",
-				crickdlequestion: "Bangladesh player scored 60 & 93 in this match?"
+				nation1: "England",
+				nation2: "India",
+				date: "Jul 29-Aug 1, 2011",
+				venue: "Nottingham",
+				score: "England 221 & 544, India (T: 478) 288 & 158; England won by 319 runs",
+				crickdlequestion: "England player scored 64 & 44 and took 6/46 & 2/30 in this match?"
 			};
 
-			const correctPlayer = ["RAHIM"];
+			const correctPlayer = ["BROAD"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
