--- a/index.html
+++ b/index.html
@@ -526,14 +526,14 @@
 		<script>
 			const gameDetails = {
 				nation1: "England",
-				nation2: "India",
-				date: "Jul 29-Aug 1, 2011",
-				venue: "Nottingham",
-				score: "England 221 & 544, India (T: 478) 288 & 158; England won by 319 runs",
-				crickdlequestion: "England player scored 64 & 44 and took 6/46 & 2/30 in this match?"
+				nation2: "Australia",
+				date: "Aug 23-27, 2001",
+				venue: "The Oval",
+				score: "Australia 641/4d, England (f/o) 432 & 184; Australia won by an innings and 25 runs",
+				crickdlequestion: "Australia player took 7/165 & 4/64 in this match?"
 			};
 
-			const correctPlayer = ["BROAD"];
+			const correctPlayer = ["WARNE"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
