--- a/index.html
+++ b/index.html
@@ -525,15 +525,15 @@
       </div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "Australia",
-				date: "Aug 23-27, 2001",
-				venue: "The Oval",
-				score: "Australia 641/4d, England (f/o) 432 & 184; Australia won by an innings and 25 runs",
-				crickdlequestion: "Australia player took 7/165 & 4/64 in this match?"
+				nation1: "India",
+				nation2: "New Zealand",
+				date: "Nov 25-29, 2021",
+				venue: "Kanpur",
+				score: "India 345 & 234/7d, New Zealand (T: 284) 296 & 165/9; Match drawn",
+				crickdlequestion: "India player scored 105 & 65 in this match?"
 			};
 
-			const correctPlayer = ["WARNE"];
+			const correctPlayer = ["IYER", "SHREYAS"];
 			localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
