--- a/result.html
+++ b/result.html
@@ -500,19 +500,22 @@ let streak = parseInt(localStorage.getItem("streak"), 10);
   localStorage.setItem("streak", streak.toString());
 }
 		
-       if (isCorrect && !isSamePeriod(lastTimestamp)) {
-  result1MessageElement.textContent = "Bowled 'em!";
-  result2MessageElement.textContent = "You got today's Crickdle.";
+       if (isCorrect) {
+			result1MessageElement.textContent = "Bowled 'em!";
+			result2MessageElement.textContent = "You got today's Crickdle.";
+	
 
-  streak++;
-  localStorage.setItem("streak", streak.toString());
-  localStorage.setItem("lastTimestamp", new Date().toISOString());
-} else if (!isCorrect) {
-  result1MessageElement.textContent = "Out for a duck!";
-  result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is " + correctPlayer + ".";
-  streak = 0;
-  localStorage.setItem("streak", streak.toString());
-}
+	  if (!lastTimestamp || !isSamePeriod(lastTimestamp)) {
+	    streak++;
+	    localStorage.setItem("streak", streak.toString());
+	    localStorage.setItem("lastTimestamp", new Date().toISOString());
+	  }
+	} else {
+	  result1MessageElement.textContent = "Out for a duck!";
+		result2MessageElement.textContent = "You didn't get today's Crickdle. The correct answer is " + correctPlayer + ".";
+	  streak = 0;
+	  localStorage.setItem("streak", streak.toString());
+	}
 		
 const streakElement = document.getElementById("streak");
 streakElement.textContent = `${streak}`;
