--- a/index.html
+++ b/index.html
@@ -485,14 +485,14 @@
       <script>
          const gameDetails = {
          	nation1: "India",
-         	nation2: "New Zealand",
-         	date: "Nov 25-29, 2021",
-         	venue: "Kanpur",
-         	score: "India 345 & 234/7d, New Zealand (T: 284) 296 & 165/9; Match drawn",
-         	crickdlequestion: "India player scored 105 & 65 in this match?"
+         	nation2: "Pakistan",
+         	date: "Mar 8-12, 2005",
+         	venue: "Mohali",
+         	score: "Pakistan 312 & 496/9d, India (T: 293) 516 & 85/1; Match drawn",
+         	crickdlequestion: "Pakistan player scored 109 in this match?"
          };
          
-         const correctPlayer = ["IYER", "SHREYAS"];
+         const correctPlayer = ["AKMAL"];
          localStorage.setItem("correctPlayer", JSON.stringify(correctPlayer[0]));
          
          document.getElementById("nation1").textContent = gameDetails.nation1;
